--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,12 @@
 {
     "files.associations": {
         "*.vue": "html",
-        "user.h": "c"
+        "user.h": "c",
+        "param.h": "c",
+        "types.h": "c",
+        "memlayout.h": "c",
+        "spinlock.h": "c",
+        "riscv.h": "c",
+        "defs.h": "c"
     }
 }
